crates/bitnet-inference/tests/snapshots/snapshot_wave18__w18_generation_config_with_stops.snap
---
source: crates/bitnet-inference/tests/snapshot_wave18.rs
expression: cfg
---
GenerationConfig {
    max_new_tokens: 16,
    temperature: 0.0,
    top_k: 1,
    top_p: 1.0,
    repetition_penalty: 1.0,
    stop_sequences: [
        "</s>",
        "\n\n",
    ],
    stop_token_ids: [
        128009,
        128001,
    ],
    stop_string_window: 64,
    seed: Some(
        42,
    ),
    skip_special_tokens: true,
    eos_token_id: Some(
        2,
    ),
    logits_tap_steps: 0,
    logits_topk: 10,
    logits_cb: false,
    add_bos: false,
}
