crates/bitnet-inference/tests/snapshots/snapshot_wave18__w18_inference_config_cpu_optimized.snap
---
source: crates/bitnet-inference/tests/snapshot_wave18.rs
expression: cfg
---
InferenceConfig {
    max_context_length: 2048,
    num_threads: 4,
    batch_size: 1,
    mixed_precision: false,
    memory_pool_size: 536870912,
}
