crates/bitnet-inference/tests/snapshots/snapshot_wave18__w18_inference_config_gpu_optimized.snap
---
source: crates/bitnet-inference/tests/snapshot_wave18.rs
expression: cfg
---
InferenceConfig {
    max_context_length: 2048,
    num_threads: 4,
    batch_size: 4,
    mixed_precision: true,
    memory_pool_size: 1073741824,
}
