crates/bitnet-inference/tests/snapshots/snapshot_wave18__w18_inference_metrics_sample.snap
---
source: crates/bitnet-inference/tests/snapshot_wave18.rs
expression: m
---
InferenceMetrics {
    prompt_tokens: 128,
    generated_tokens: 64,
    time_to_first_token_ms: 25.0,
    total_generation_time_ms: 3200.0,
    tokens_per_second: 20.0,
    peak_memory_bytes: 1048576,
    cache_hit_rate: 0.85,
}
