crates/bitnet-inference/tests/snapshots/snapshot_wave18__w18_inference_metrics_zero_time.snap
---
source: crates/bitnet-inference/tests/snapshot_wave18.rs
expression: m
---
InferenceMetrics {
    prompt_tokens: 0,
    generated_tokens: 0,
    time_to_first_token_ms: 0.0,
    total_generation_time_ms: 0.0,
    tokens_per_second: 0.0,
    peak_memory_bytes: 0,
    cache_hit_rate: 0.0,
}
