crates/bitnet-inference/tests/snapshots/snapshot_wave18__w18_inference_result_sample.snap
---
source: crates/bitnet-inference/tests/snapshot_wave18.rs
expression: result
---
InferenceResult {
    generated_text: "The capital of France is Paris.",
    tokens_generated: 32,
    latency_ms: 2000,
    tokens_per_second: 16.0,
    performance_metrics: PerformanceMetrics {
        total_latency_ms: 2000,
        tokens_generated: 32,
        tokens_per_second: 16.0,
        first_token_latency_ms: Some(
            50,
        ),
        average_token_latency_ms: Some(
            62.5,
        ),
        memory_usage_bytes: None,
        cache_hit_rate: None,
        backend_type: "cpu",
        model_load_time_ms: None,
        tokenizer_encode_time_ms: None,
        tokenizer_decode_time_ms: None,
        forward_pass_time_ms: None,
        sampling_time_ms: None,
    },
}
