crates/bitnet-inference/tests/snapshots/snapshot_wave18__w18_kv_cache_after_hits_and_misses.snap
---
source: crates/bitnet-inference/tests/snapshot_wave18.rs
expression: cache.stats()
---
CacheStats {
    total_entries: 1,
    compressed_entries: 0,
    current_size_bytes: 32,
    max_size_bytes: 1073741824,
    hit_rate: 0.6666666666666666,
    memory_efficiency: 2.9802322387695313e-8,
    cache_size: 32,
}
