crates/bitnet-inference/tests/snapshots/snapshot_wave18__w18_kv_cache_after_store.snap
---
source: crates/bitnet-inference/tests/snapshot_wave18.rs
expression: cache.stats()
---
CacheStats {
    total_entries: 3,
    compressed_entries: 0,
    current_size_bytes: 96,
    max_size_bytes: 1073741824,
    hit_rate: 0.0,
    memory_efficiency: 8.940696716308594e-8,
    cache_size: 96,
}
